--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ jobs:
     COMPILER_PLATFORM: vs2019
     PROJECT_OS: windows
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/windows/premake-core/premake5.exe
-    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake5/premake-5.0.0-alpha16-windows.zip
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-windows.zip
   steps:
   - checkout: self
     clean: true
@@ -70,7 +70,7 @@ jobs:
     COMPILER_PLATFORM: gmake
     PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/linux/premake-core/premake5
     PROJECT_OS: linux
-    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake5/premake-5.0.0-alpha16-linux.tar.gz
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-linux.tar.gz
     CC: gcc-9
     CXX: g++-9
     AR: gcc-ar-9
@@ -98,6 +98,47 @@ jobs:
     displayName: 'Publish build artifacts'
     inputs:
       ArtifactName: linux
+- job: macosx
+  displayName: macOS
+  pool:
+    name: Azure Pipelines
+    vmImage: macOS-11
+  timeoutInMinutes: 10
+  variables:
+    BOOTSTRAP_URL: https://raw.githubusercontent.com/danielga/garrysmod_common/master/build/bootstrap.sh
+    BUILD_SCRIPT: $(System.DefaultWorkingDirectory)/dependencies/garrysmod_common/build/build.sh
+    COMPILER_PLATFORM: gmake
+    PREMAKE5: $(System.DefaultWorkingDirectory)/dependencies/macosx/premake-core/premake5
+    PROJECT_OS: macosx
+    PREMAKE5_URL: https://github.com/danielga/garrysmod_common/releases/download/premake-build%2F5.0.0-beta1/premake-5.0.0-beta1-macosx.tar.gz
+    MACOSX_SDK_URL: https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.7.sdk.tar.xz
+    MACOSX_SDK_DIRECTORY: $(System.DefaultWorkingDirectory)/dependencies/macosx/MacOSX10.7.sdk
+    SDKROOT: $(System.DefaultWorkingDirectory)/dependencies/macosx/MacOSX10.7.sdk
+    AR: ar
+  steps:
+  - checkout: self
+    clean: true
+    fetchDepth: 1
+    submodules: recursive
+  - bash: 'curl -s -L "$BOOTSTRAP_URL" | bash'
+    displayName: Bootstrap
+  - bash: |
+      sudo xcode-select -s "/Applications/Xcode_11.7.app/Contents/Developer"
+      $BUILD_SCRIPT
+    displayName: Build
+  - task: CopyFiles@2
+    displayName: 'Copy files to $(Build.ArtifactStagingDirectory)'
+    inputs:
+      SourceFolder: '$(System.DefaultWorkingDirectory)/projects/macosx/gmake'
+      Contents: '*/Release/*.dll'
+      TargetFolder: '$(Build.ArtifactStagingDirectory)'
+      CleanTargetFolder: true
+      flattenFolders: true
+      preserveTimestamp: true
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish build artifacts'
+    inputs:
+      ArtifactName: macosx
 - job: publish
   displayName: Publish to GitHub Releases
   pool:
@@ -107,6 +148,7 @@ jobs:
   dependsOn:
     - windows
     - linux
+    - macosx
   condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
   steps:
   - task: DownloadBuildArtifacts@0
